--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=orders
 spring.groovy.template.cache=false
+server.port=8081
 
 
 # ➜ Première base : products_db
@@ -7,11 +8,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/orders_db
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# ➜ Deuxième base : stocks_db (avec un préfixe custom)
-# spring.secondary-datasource.url=jdbc:postgresql://localhost:5432/stocks_db
-# spring.secondary-datasource.username=postgres
-# spring.secondary-datasource.password=123
 
 # Hibernate config
 spring.jpa.hibernate.ddl-auto=update
